# LitGit

./: .gitignore  .gitnexusignore  .graphifyignore  CLAUDE.md  DESIGN.json  DESIGN.md  GEMINI.md  PRODUCT.md  README.md  biome.jsonc  lefthook.yml  package.json  react-doctor.config.json  skills-lock.json  tsconfig.json  turbo.json
.codex/: hooks.json
.github/: changelog-config.json  copilot-instructions.md
.github/hooks/: ultracite.json
.github/workflows/: release.yml
apps/desktop/: .env.example  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/public/: oauth-success.html
apps/desktop/scripts/: build-tauri.mjs  generate-gitignore-templates.mjs
apps/desktop/src/: index.css  main.tsx  routeTree.gen.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.cdp.conf.json  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json  windows-decorum.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: askpass.rs  askpass_ipc.rs  askpass_state.rs  branches.rs  commit_messages.rs  diff_preview.rs  diff_workspace.rs  git_host_auth.rs  git_support.rs  history.rs  integrations_store.rs  launcher.rs  lib.rs  oauth.rs  provider_ssh.rs  repository.rs  repository_actions.rs  repository_publishing.rs  settings.rs  ssh_auth.rs  stashes.rs  terminal.rs  windowing.rs  working_tree.rs
apps/desktop/src/components/: mode-toggle.tsx  root-shell.tsx  theme-provider.tsx
apps/desktop/src/components/auth/: disconnect-provider-dialog.tsx  git-auth-dialog.tsx  global-git-auth-dialog.tsx  oauth-button.tsx  provider-card.tsx  provider-oauth-token-dialog.tsx
apps/desktop/src/components/code-editor/: code-editor-hooks.ts  code-editor-runtime.tsx  code-editor-types.ts  code-editor.tsx
apps/desktop/src/hooks/: use-debounced-value.ts  use-git-auth-prompts.ts  use-launcher-actions.ts  use-reducer-state.ts
apps/desktop/src/lib/: keyboard-shortcuts.ts  repo-diff-preview-contract.ts  repo-diff-workspace-contract.ts  repository-template-data.lazy.ts  repository-template-data.ts  runtime-platform.ts  runtime-window-chrome.ts  tauri-auth-client.ts  tauri-integrations-client.ts  tauri-publishing-client.ts  tauri-repo-client.ts  tauri-settings-client.ts  tauri-terminal-client.ts
apps/desktop/src/routes/: __root.tsx  index.tsx  onboarding.tsx  repo.$repoId.tsx  settings.tsx
apps/desktop/src/styles/: index.css
graphify-out/: GRAPH_REPORT.md  graph.html  graph.json
packaging/aur/: .gitignore  PKGBUILD  README.md  litgit-desktop-bin.install
scripts/: bump-deps.mjs  bump-skills.mjs  bump.mjs  cleanup.mjs  gitnexus-analyze-and-sync.mjs
(+197 files in other folders)
