[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
fontdb = "0.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
rfd = "0.15"
portable-pty = "0.8"
sha2 = "0.10"
md-5 = "0.10"
ureq = { version = "2.10", default-features = true, features = ["socks-proxy"] }
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent", "apple-native", "windows-native"] }
