[package]
name = "app"
version = "0.1.0"
description = "A fast, fluent, and minimal Git client designed for developers who demand speed and a clutter-free workflow"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"
default-run = "app"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "litgit-git-askpass"
path = "src/bin/litgit-git-askpass.rs"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
base64 = "0.22"
fontdb = "0.23"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = { version = "2", features = ["deep-link"] }
rfd = "0.15"
portable-pty = "0.8"
sha2 = "0.10"
md-5 = "0.10"
ureq = { version = "3.2", default-features = true, features = ["socks-proxy", "json", "rustls"] }
keyring = { version = "3.6", default-features = false, features = ["linux-native-sync-persistent", "apple-native", "windows-native"] }
encoding_rs = "0.8"
chardetng = "0.1"
thiserror = "2.0"
rand = "0.8"
url = "2"
tokio = { version = "1.44", features = ["rt", "rt-multi-thread", "macros", "sync", "io-util", "net", "time"] }
dirs = "6.0"
chrono = { version = "0.4.44", features = ["serde"] }
uuid = { version = "1.6", features = ["v4", "serde"] }
urlencoding = "2"
tauri-plugin-deep-link = "2"
dotenvy = "0.15"
